# nxontology-data

./: .gitignore  .pre-commit-config.yaml  003_kegg_br08001.json  004_kegg_br08002.json  005_kegg_br08003.json  006_kegg_br08005.json  007_kegg_br08006.json  008_kegg_br08007.json  014_kegg_br08301.json  015_kegg_br08302.json  016_kegg_br08303.json  017_kegg_br08304.json  018_kegg_br08305.json  020_kegg_br08307.json  022_kegg_br08310.json  023_kegg_br08311.json  024_kegg_br08312.json  025_kegg_br08313.json  028_kegg_br08331.json  054_lipid_maps_lm.json  059_kegg_br08009.json  072_pubchem_compound_toc.json  079_who_anatomical_therapeutic_chemical_atc_classification_atctree.json  080_pubchem_pcassay_tree.json  081_epa_safer_choice_tree.json  083_ghs_classification_unece_un_tree.json  083_un_globally_harmonized_system_of_classification_and_labelling_chemicals_ghs_tree.json  084_chemidplus_tree.json  087_chembl_target_tree.json  088_swiss_institute_of_bioinformatics_enzyme_classification.json  090_gene_ontology_go_cellular_component.json  092_iuphar_bps_guide_to_pharmacology_target_classification.json  093_ncbi_taxonomy.json  095_collaborative_drug_discovery_inc_cdd.json  096_kegg_br08330.json  098_consumer_product_information_database_cpid_household_tree.json  099_epa_chemical_and_products_database_cpdat_tree.json  100_kegg_br08021.json  101_norman_suspect_list_exchange_sle_tree.json  102_drug_enforcement_administration_dea_tree.json  (+26 more)
.github/actions/setup/: action.yaml
.github/workflows/: create.yaml  schedules.yaml  test.yaml
nxontology_data/: commands.py  utils.py
nxontology_data/efo/: README.md  efo.py
nxontology_data/efo/queries/: alt_id.rq  mapping_properties.rq  predicates.rq  sources.rq  subclasses.rq  subsets.rq  synonyms.rq  terms.rq  terms_obsolete.rq  therapeutic_areas.rq  xref_sources.rq  xrefs.rq
nxontology_data/hgnc/: README.md  hgnc.py
nxontology_data/mesh/: README.md  mesh.ipynb  mesh.py
nxontology_data/mesh/queries/: allowed-qualifiers.rq  concept-relations.rq  descriptor-qualifier-pairs.rq  edges.rq  identifiers.rq  relationships.rq  synonyms.rq  tree-numbers.rq  vocab-subclasses.rq
nxontology_data/mesh/tests/: mesh_test.py
nxontology_data/mesh/tests/rdf-2020-subset/: mesh2020-subset.nt  nxo-node-link.json  vocabulary_1.0.0.ttl  void_1.0.0.ttl
nxontology_data/pubchem/: classifications.py  classifications_test.py
nxontology_data/tests/: utils_test.py
nxontology_imports/: commands.py
nxontology_imports/chembl/: protein_class.py
nxontology_imports/pubchem/: classfications.py  classifications.py  classifications_test.py
undefined/actions_github_pages_1651252139745/: test.json
