[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nxontology_data"
version = "0.0.0"
description = "Pipelines to import ontologies into NXOntology objects."
authors = ["Related Sciences Data Team"]
readme = "README.md"
repository = "https://github.com/related-sciences/nxontology-data"
license = "Apache-2.0"

[tool.poetry.scripts]
nxontology_data = "nxontology_data.commands:cli"

# https://python-poetry.org/docs/versions/
[tool.poetry.dependencies]
python = "^3.10"
bioregistry = "^0.8.3"
bioversions = "^0.5.98"
fire = "^0.4.0"
jupyter = "^1.0.0"
nbconvert = "^6.2.0"
notebook = "^6.4.4"
nxontology = "^0.4.1"
openpyxl = "^3.0.9"
pandas = "^1.4.1"
papermill = "^2.3.3"
requests = "^2.26.0"
rdflib = "^6.2.0"
fsspec = "^2022.3.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.4"
pytest = "^7.2.0"

[tool.ruff]
target-version = "py310"
ignore = [
    "E501",  # line-too-long (black should handle)
]
line-length = 88
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "C90",  # mccabe
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycode warnings
]

[tool.mypy]
python_version = "3.10"

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[[tool.mypy.overrides]]
module = [
    "fire.*",
    "fsspec.*",
    "networkx.*",
    "pandas.*",
    "rdflib.*",
    "requests.*",
]
ignore_missing_imports = true
