[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nxontology_data"
version = "0.0.0"
description = "Pipelines to import ontologies into NXOntology objects."
authors = ["Related Sciences Data Team"]
readme = "README.md"
repository = "https://github.com/related-sciences/nxontology-data"
license = "Apache-2.0"

[tool.poetry.scripts]
nxontology_data = "nxontology_data.commands:cli"

# https://python-poetry.org/docs/versions/
[tool.poetry.dependencies]
python = "^3.10"
bioregistry = "^0.10"
bioversions = "^0.5"
fire = "^0.5"
jupyter = "^1.0"
nbconvert = "^6.2"
notebook = "^6.4"
nxontology = "^0.5"
openpyxl = "^3.0"
pandas = "^2.0"
papermill = "^2.3"
requests = "^2.26"
rdflib = "^6.2"
fsspec = "^2022.3.0"
numpy = "^1.22"
torch = [
    { version = "^2.0.1", markers = "sys_platform != 'linux'", source = "pypi" },
    # Use different src for linux, see: https://pytorch.org/get-started/locally/
    { version = "^2.0.1", markers = "sys_platform == 'linux'", source = "pytorch-cpu-src" },
]
nxontology-ml = {git = "https://github.com/related-sciences/nxontology-ml", rev = "1b5923314f880818485aacecbc0b544679a9f0eb"}

[[tool.poetry.source]]
# pytorch is used by nxontology-ml. Without this, we were getting the error:
# Repository "pytorch-cpu-src" does not exist.
name = "pytorch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
pytest = "^7.2.0"

[tool.ruff]
target-version = "py310"
ignore = [
    "E501",  # line-too-long (black should handle)
]
line-length = 88
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "C90",  # mccabe
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycode warnings
]

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true
show_error_context = true

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[[tool.mypy.overrides]]
module = [
    "fire.*",
    "fsspec.*",
    "networkx.*",
    "pandas.*",
    "rdflib.*",
    "requests.*",
]
ignore_missing_imports = true
